# ticket

./: Cargo.toml  PHILOSOPHY.md  README.md  WHY.md  dprint.json  flake.nix  justfile  result
assets/: demo-commands.sh  demo.cast
src/: id.rs  main.rs  storage.rs  types.rs
