[package]
name = "ticket"
version = "0.1.0"
edition = "2021"
description = "A minimal, Unix-philosophy ticket tracker"

[[bin]]
name = "tk"
path = "src/main.rs"

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
hex = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
sha2 = "0.10"
uuid = { version = "1", features = ["v4"] }
